rollouts.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: red-rollout
  namespace: skills
  labels:
    app: red
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: red
  template:
    metadata:
      labels:
        app: red
    spec:
      terminationGracePeriodSeconds: 30
      nodeSelector:
        kubernetes.io/os: linux
        eks.amazonaws.com/nodegroup: gj2025-eks-app-nodegroup
      containers:
      - name: red
        image: 571480186401.dkr.ecr.ap-northeast-2.amazonaws.com/red:20250920111742
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
  strategy:
    blueGreen:
      activeService: red-service
      autoPromotionEnabled: true
