ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: red-ingress
  namespace: skills
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/group.name: gj2025-app-alb
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: "8080"
    alb.ingress.kubernetes.io/success-codes: "200,302"
spec:
  rules:
    - http:
        paths:
          - path: /red
            pathType: Prefix
            backend:
              service:
                name: red-service
                port:
                  number: 80
          - path: /health
            pathType: Exact
            backend:
              service:
                name: red-service
                port:
                  number: 80
